# emoji-album

./: Cargo.toml  LICENSE  README.md  emojis.csv
.github/workflows/: rust.yml
src/: database.rs  error.rs  handlers.rs  lib.rs  logic.rs  main.rs  parsers.rs  presenters.rs  telegram.rs  types.rs
src/storage/: in_memory.rs  mod.rs
