[package]
name = "emoji-album"
version = "0.1.0"
authors = ["Otávio Pace <otaviopp8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
telegram-bot = "0.8.0"
tokio = { version = "0.2", features = ["fs", "macros", "time"]}
rand = "0.6.1"
lazy_static = "1.4.0"
futures = "0.3.14"
indexmap = "1.6.2"
itertools = "0.10.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
